--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,18 +1,18 @@
 <div class="row">
-  <h2>Category Photos</h2>
+    <h2>Category Photos</h2>
 
-  <br><br>
-  <div class="row">
-      <div *ngFor="let category of visibleCategories">
-          <div class="col-md-3">
-              <div class="card" style="width: 18rem;">
-                  <img src="{{category.url}}" class="card-img-top" alt="..." width="200" height="160">
-                  <div class="card-body">
-                      <a [routerLink]="['/category', category.caption]" class="card-title" >{{category.caption}}</a>
-                      <p class="card-text">{{category.aciklama}}.</p>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
+    <br><br>
+    <div class="row">
+        <div *ngFor="let category of categories">
+            <div class="col-md-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="{{ category.cat_picture }}" class="card-img-top" alt="..." width="200" height="160">
+                    <div class="card-body">
+                        <a [routerLink]="['/galery', category.id]" class="card-title">{{category.category_name}}</a>
+                        <p class="card-text">{{category.cat_description}}.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
