--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <nav class="navbar navbar-inverse navbar-fixed-top">
+  <nav class="navbar navbar-inverse navbar-fixed-top" style="background: #7B241C;">
     <div class="container">
       <div class="navbar-header">
         <a class="navbar-brand logo" href="#">{{ title }}</a>
@@ -9,8 +9,6 @@
           <li><a href="/category">Category</a></li>
           <li><a href="/galery">Galery</a></li>
           <li><a href="/reference">Reference</a></li>
-          <li><a href="/aboutus">About</a></li>
-          <li><a href="#">Contact</a></li>
         </ul>
       </div>
       <!--/.nav-collapse -->
