--- a/src/app/select-galery/select-galery.component.html
+++ b/src/app/select-galery/select-galery.component.html
@@ -10,8 +10,8 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <h5>{{galery.job_name}}</h5>
-                    <p>Bu bir {{galery.category}} türünde resimdir.</p>
+                    <h3>{{galery.job_name}}</h3>
+                    <p>Yapılan işlerimizde en mümkün şekilde temiz olmasına dikkat edilmektedir.</p>
                 </div>
             </div>
         </div>
