--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-inverse navbar-fixed-top" style="background: #7B241C;">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand logo" href="#">{{ title }}</a>
+        <a class="navbar-brand logo" href="/home">{{ title }}</a>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
